--- a/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.ipynb
+++ b/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.ipynb
@@ -24,7 +24,7 @@
     "import math\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
     "from sklearn import preprocessing\n",
     "import warnings\n",
     "import requests\n",
@@ -1712,7 +1712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 ('venv1': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1726,7 +1726,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "14f84f3ff6d1392257c2ca118ba762d5a9b531e036a7be88c358f45d1fae0cc1"
+   }
   }
  },
  "nbformat": 4,
