--- a/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.ipynb
+++ b/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.ipynb
@@ -5,7 +5,7 @@
    "id": "eb498f7b",
    "metadata": {},
    "source": [
-    "# Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark\n",
+    "# Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmarking Resource\n",
     "\n",
     "This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs two DEG methods, characteristic direction and log fold change, on the data using code adapted from Bulk RNA-seq Analysis pipeline appyter: https://appyters.maayanlab.cloud/Bulk_RNA_seq/\n",
     "\n",
@@ -1712,7 +1712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('venv1': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1726,7 +1726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
